# ConvexAutoBackup

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: args.rs  main.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: auth.rs  backup.rs  convex.rs  db.rs  dr.rs  lib.rs  manifest.rs  models.rs  paths.rs  restore.rs  runner.rs  schedule.rs  scheduler.rs  secrets.rs  storage.rs  verify.rs
crates/core/src/db/: resources.rs  rows.rs  tests.rs
crates/firstparty-error/: Cargo.toml  README.md
crates/firstparty-error/src/: lib.rs
crates/mcp/: Cargo.toml  README.md
crates/mcp/src/: main.rs
crates/server/: Cargo.toml  README.md  build.rs
crates/server/src/: lib.rs  main.rs  metadata.rs  tests.rs
crates/server/web-dist/: index.html
crates/server/web-dist/assets/: index-BkGWjepu.js  index-BqJpBMOR.js  index-C_tYTyoa.css  index-Ck25b4Al.js  index-DMD_D6eO.css
crates/worker/: Cargo.toml  README.md
crates/worker/src/: lib.rs  main.rs
docs/: API_CONTRACT.md  ARCHITECTURE.md  BACKUP_MODEL.md  CLI_CONTRACT.md  DEPENDENCY_AUDIT.md  DEPENDENCY_OWNERSHIP_ROLLOUT.md  DEPLOYMENT.md  DR_MODEL.md  GITHUB_REPOSITORY.md  INSTALLATION.md  MCP_CONTRACT.md  MILESTONES.md  OPEN_SOURCE_RELEASE.md  OPERATIONS.md  PRODUCT_SPEC.md  ROADMAP.md  SECURITY_MODEL.md  TESTING.md  TROUBLESHOOTING.md
install/: docker-setup.sh  install.ps1  install.sh
packaging/: docker-entrypoint.sh
packaging/wix/: ConvexAutoBackup.wxs
scripts/ci/: check-file-lines.sh  sync-web-dist.sh
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: appState.test.ts  appState.ts  constants.ts  main.tsx  releases.test.ts  releases.ts  styles.css
web/src/components/: auth.css  auth.tsx  common.tsx
web/src/sections/: audit.tsx  dashboard.tsx  dr.tsx  runs.tsx  security.tsx  setup.tsx  setupGuide.css  setupScheduleForm.tsx
