[workspace]
members = [
  "crates/core",
  "crates/server",
  "crates/cli",
  "crates/worker",
  "crates/mcp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/KodyDennon/ConvexAutoBackup"
authors = ["ConvexAutoBackup contributors"]

[workspace.dependencies]
anyhow = "1.0.100"
aes-gcm = "0.10.3"
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.7"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
cron = "0.15.0"
dirs = "6.0.0"
getrandom = "0.2.17"
http = "1.4.0"
regex = "1.12.2"
object_store = { version = "0.14.0", features = ["aws"] }
rusqlite = { version = "0.37.0", features = ["bundled", "uuid", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
subtle = "2.6.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "process", "fs", "time"] }
tower-http = { version = "0.6.7", features = ["cors", "fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["serde", "v7"] }
