[workspace]
members = [
  "crates/firstparty-error",
  "crates/core",
  "crates/server",
  "crates/cli",
  "crates/worker",
  "crates/mcp",
]
resolver = "2"

[workspace.package]
version = "0.1.0-beta.4"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/KodyDennon/ConvexAutoBackup"
homepage = "https://github.com/KodyDennon/ConvexAutoBackup#readme"
authors = ["ConvexAutoBackup contributors"]

[workspace.dependencies]
aes-gcm = "0.11.0"
argon2 = "0.5.3"
axum = "0.8.7"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
getrandom = "0.4.3"
http = "1.4.0"
hmac = "0.12.1"
hex = "0.4.3"
percent-encoding = "2.3.2"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
rusqlite = { version = "0.40.1", features = ["bundled", "uuid", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
subtle = "2.6.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "process", "fs", "time"] }
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["serde", "v7"] }
firstparty-error = { version = "=0.1.0-beta.4", path = "crates/firstparty-error" }
