[package]
name = "convex-autobackup"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
convex-autobackup-core = { path = "../core" }
convex-autobackup-server = { path = "../server" }
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
