[package]
name = "convex-autobackup-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Core backup, restore, scheduling, encryption, and storage primitives for ConvexAutoBackup"
readme = "README.md"
keywords = ["convex", "backup", "restore", "scheduler", "storage"]
categories = ["database", "filesystem", "web-programming"]

[dependencies]
aes-gcm.workspace = true
argon2.workspace = true
base64.workspace = true
chrono.workspace = true
getrandom.workspace = true
hmac.workspace = true
hex.workspace = true
percent-encoding.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
tokio.workspace = true
uuid.workspace = true
firstparty-error = { workspace = true, features = ["chrono", "reqwest", "rusqlite", "serde_json", "uuid"] }

[dev-dependencies]
tempfile = "3.23.0"
