[package]
name = "convex-autobackup-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Model Context Protocol helper binary for ConvexAutoBackup automation"
readme = "README.md"
keywords = ["convex", "backup", "mcp", "automation", "restore"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
