[package]
name = "convex-autobackup-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
convex-autobackup-core = { version = "0.1.0-beta.1", path = "../core" }
dirs.workspace = true
mime_guess = "2.0.5"
rust-embed = "8.9.0"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
http.workspace = true
tempfile = "3.23.0"
tower = "0.5.2"
