[package]
name = "convex-autobackup-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Axum web server and embedded dashboard for ConvexAutoBackup"
readme = "README.md"
keywords = ["convex", "backup", "server", "dashboard", "axum"]
categories = ["web-programming::http-server", "database"]

[dependencies]
axum.workspace = true
convex-autobackup-core = { version = "=0.1.0-beta.2", path = "../core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
http.workspace = true
tempfile = "3.23.0"
tower = "0.5.2"
