[package]
name = "convex-autobackup-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Scheduled backup worker binary for ConvexAutoBackup"
readme = "README.md"
keywords = ["convex", "backup", "worker", "scheduler", "restore"]
categories = ["command-line-utilities", "database"]

[dependencies]
convex-autobackup-core = { version = "=0.1.0-beta.2", path = "../core" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
